Refactor version analysis and comparison utilities
- Removed VersionAnalysisService as it was deemed unnecessary.
- Enhanced MavenCoordinateParser for improved validation and parsing logic.
- Introduced VersionComparator with comprehensive version comparison logic, including support for semantic versioning and pre-release qualifiers.
- Added unit tests for VersionComparator to validate version comparison, update type determination, and stability checks.
- Removed outdated tests for VersionAnalysisService and updated tests for MavenCoordinateParser to reflect changes in parsing logic.