@@ -8,8 +8,7 @@ import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
 /**
- * Service for handling JSON serialization of responses. Provides standardized JSON response
- * formatting for MCP tool responses with error handling and snake_case property naming.
+ * Service for converting objects to JSON responses with error handling.
  *
  * @author Arvind Menon
  * @since 0.1.0
@@ -20,22 +19,16 @@ public class JsonResponseService {
   private static final Logger logger = LoggerFactory.getLogger(JsonResponseService.class);
   private final ObjectMapper objectMapper;
 
-  /**
-   * Constructs a new JsonResponseService with the specified ObjectMapper.
-   *
-   * @param objectMapper the Jackson ObjectMapper for JSON serialization
-   */
   public JsonResponseService(ObjectMapper objectMapper) {
     this.objectMapper = objectMapper;
-    // Configure ObjectMapper to use snake_case for property names to match test expectations
     this.objectMapper.setPropertyNamingStrategy(PropertyNamingStrategies.SNAKE_CASE);
   }
 
   /**
-   * Converts an object to JSON string.
+   * Converts an object to JSON string representation.
    *
    * @param object the object to serialize
-   * @return JSON string representation or error message
+   * @return JSON string representation
    */
   public String toJson(Object object) {
     try {
@@ -53,13 +46,7 @@ public class JsonResponseService {
    * @return JSON error response
    */
   public String createErrorResponse(String errorMessage) {
-    try {
-      return objectMapper.writeValueAsString(new ErrorResponse("error", errorMessage));
-    } catch (JsonProcessingException _) {
-      // Fallback to manual JSON if ObjectMapper fails
-      return String.format(
-          "{\"status\":\"error\",\"message\":\"%s\"}", errorMessage.replace("\"", "\\\""));
-    }
+    return createResponse("error", errorMessage);
   }
 
   /**
@@ -69,19 +56,20 @@ public class JsonResponseService {
    * @return JSON not found response
    */
   public String createNotFoundResponse(String message) {
+    return createResponse("not_found", message);
+  }
+
+  private String createResponse(String status, String message) {
     try {
-      return objectMapper.writeValueAsString(new ErrorResponse("not_found", message));
+      return objectMapper.writeValueAsString(new Response(status, message));
     } catch (JsonProcessingException _) {
-      return String.format(
-          "{\"status\":\"not_found\",\"message\":\"%s\"}", message.replace("\"", "\\\""));
+      return "{\"status\":\"%s\",\"message\":\"%s\"}".formatted(status, escapeJson(message));
     }
   }
 
-  /**
-   * Error response record for standardized error formatting.
-   *
-   * @param status the response status
-   * @param message the error message
-   */
-  private record ErrorResponse(String status, String message) {}
+  private String escapeJson(String input) {
+    return input.replace("\"", "\\\"").replace("\n", "\\n").replace("\r", "\\r");
+  }
+
+  private record Response(String status, String message) {}
 }
